--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <juku-navigation>
-    <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
+    <juku-link-prev ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppi})">
       Palaa hakemusten päänäkymään
     </juku-link-prev>
     <juku-tabs>
@@ -177,7 +177,7 @@
   </juku-form>
   <div class="row">
     <div class="col-md-6">
-      <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
+      <juku-link-prev ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppi})">
         Palaa hakemusten päänäkymään
       </juku-link-prev>
     </div>
