--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -1,6 +1,6 @@
 <div class="header navbar navbar-fixed-top" role="navigation">
   <div class="container">
-    <a ng-href="{{sallittu(user, 'view-hakemuskausi') ? '#/k/hakemuskaudenhallinta':'#/h/hakemukset'}}">
+    <a ui-sref="redirect()">
       <img src="images/juku_logo.svg" class="logo"/>
     </a>
     <!-- Mobiilinavigaatio -->
