--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -7,7 +7,7 @@
 
     <!-- Navigaatio -->
     <juku-navigation>
-      <juku-link-prev href="#/h/hakemukset">
+      <juku-link-prev ui-sref="app.hakija.hakemukset.list()">
         Palaa hakemusten päänäkymään
       </juku-link-prev>
 
@@ -374,7 +374,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <juku-link-prev href="#/h/hakemukset">
+        <juku-link-prev ui-sref="app.hakija.hakemukset.list()">
           Palaa hakemusten päänäkymään
         </juku-link-prev>
       </div>
