--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -336,7 +336,7 @@
             <div
               ng-hide="(hakemusKeskenerainen() && sallittu('modify-oma-hakemus'))">
               <button data-ng-click="naytaHakemus(hakemus.hakemustilatunnus)" class="pull-right btn btn-primary">
-                Esikatsele hakemus
+                Avaa hakemus (PDF)
               </button>
             </div>
           </div>
