--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -38,7 +38,7 @@
     <div class="col-md-12">
       <button data-ng-click="naytaHakemus(hakemus.hakemustilatunnus)" class="btn btn-primary"
               noenter>
-        Esikatsele hakemus
+        Avaa hakemus (PDF)
       </button>
     </div>
   </div>
