--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -5,16 +5,16 @@
       Palaa hakemusten päänäkymään
     </juku-link-prev>
     <juku-tabs>
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'AH0', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
-        Avustushakemukset
-      </juku-tab>
-
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH1', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
-        1. maksatushakemukset
-      </juku-tab>
-
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH2', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
-        2. maksatushakemukset
+      <juku-tab
+        ng-repeat="tyyppi in constants.hakemustyypit"
+        ui-sref="app.kasittelija.hakemukset.hakemus({
+          vuosi: hakemus.vuosi,
+          tyyppi: tyyppi,
+          id: avustushakemusid,
+          m1id: maksatushakemus1id,
+          m2id: maksatushakemus2id
+        })">
+        {{ tyyppi | toApplicationName }}
       </juku-tab>
     </juku-tabs>
   </juku-navigation>
