--- a/app/scripts/components/tab/index.styl
+++ b/app/scripts/components/tab/index.styl
@@ -2,6 +2,7 @@
   background: #ccc
   padding: 0 1em
   display: inline-block
+  margin: 0 3px
   border-radius: 5px 5px 0 0
   color: #fff
   font-weight: bold
@@ -9,6 +10,7 @@
   &:hover
     color: #fff
     text-decoration: none
-
+  &:last-child
+    margin-right 0
   &.is-selected
     background: colors.primary
