--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -5,15 +5,18 @@
       Palaa hakemusten päänäkymään
     </juku-link-prev>
     <juku-tabs>
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'AH0', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
+      <juku-tab
+        ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'AH0', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
         Avustushakemukset
       </juku-tab>
 
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH1', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
+      <juku-tab
+        ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH1', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
         1. maksatushakemukset
       </juku-tab>
 
-      <juku-tab ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH2', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
+      <juku-tab
+        ui-sref="app.kasittelija.hakemukset.hakemus({vuosi: hakemus.vuosi, tyyppi: 'MH2', id: avustushakemusid, m1id: maksatushakemus1id, m2id: maksatushakemus2id})">
         2. maksatushakemukset
       </juku-tab>
     </juku-tabs>
@@ -41,7 +44,7 @@
     <div class="row" ng-show="hasPaatos(hakemus.hakemustilatunnus)">
       <div class="col-md-12">
         <p>
-          <a href="{{haePaatosPdf()}}"  target="_blank"><span
+          <a href="{{haePaatosPdf()}}" target="_blank"><span
             class="glyphicon glyphicon-file"></span>
             Avaa päätös (PDF)</a>
           <a href="resources/OIKAISUVAATIMUSOSOITUS.docx" target="_blank"><span
