LIVIJUKU-362 - hakemuksen otsikon switch lauseen purkaminen filttereiksi

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -27,13 +27,7 @@
     </juku-navigation>
 
     <juku-form name="hakemusForm" juku-poistumisvaroitus="">
-      <h1>
-        <span ng-switch on="tyyppi">
-          <span ng-switch-when='MH1'>Joukkoliikenteen 1. maksatushakemus {{hakemus.vuosi}}</span>
-          <span ng-switch-when='MH2'>Joukkoliikenteen 2. maksatushakemus {{hakemus.vuosi}}</span>
-          <span ng-switch-default>Joukkoliikenteen valtionavustushakemus {{hakemus.vuosi}}</span>
-        </span>
-      </h1>
+      <h1>Joukkoliikenteen {{tyyppi | toApplicationName}} {{hakemus.vuosi}}</h1>
 
       <div class="row" ng-show="hasPaatos(hakemus.hakemustilatunnus)">
         <div class="col-md-12">
