--- a/app/scripts/components/header/index.styl
+++ b/app/scripts/components/header/index.styl
@@ -12,7 +12,8 @@
       margin-top: 0.5em
       padding: 0.5em 0.5em
       border-radius: 3px
-      background: #0860A4
+      background: rgba(8, 96, 164, .4)
+      transition: background-color 90ms ease
 
   &.is-active
     background-color: #ffffff
