--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -27,20 +27,20 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Nousijat keskimääräisenä talven arkipäivänä / lauantaina / sunnuntaina</h3>
-      <div id="lks_grid1" ui-grid="lks_grid1" ui-grid-resize-columns ui-grid-edit ui-grid-row-edit class="grid"></div>
+      <div id="lks_grid1" ui-grid="lks_grid1" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
       </div>
     </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Nousijat kuukausittain</h3>
-      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-resize-columns ui-grid-edit ui-grid-row-edit class="grid"></div>
+      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Bruttoliikenteen tarjouskilpailut</h3>
       <button id="uusiRivi" ng-click="uusiRivi()">Lisää rivi</button>
-      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-resize-columns ui-grid-edit ui-grid-row-edit class="grid"></div>
+      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
     </div>
   </div>
 </div>
