--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -169,12 +169,7 @@
     </div>
   </juku-form>
   <div class="row">
-    <div class="col-md-6">
-      <juku-link-prev ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppi})">
-        Palaa hakemusten päänäkymään
-      </juku-link-prev>
-    </div>
-    <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-6">
+    <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-12">
       <button ng-show="hakemusVireilla()"
               juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
               varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
@@ -194,6 +189,20 @@
               data-ng-click="taydennyspyynto()"
               class="pull-right btn btn-danger" disabled>Palauta täydennettäväksi
       </button>
+    </div>
+  </div>
+  <div class="row">&nbsp;</div>
+  <div class="row">
+    <div class="pull-left">
+      <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
+        Palaa hakemusten päänäkymään
+      </juku-link-prev>
+    </div>
+    <div class="pull-right">
+      <juku-link-next
+        ng-click="siirrySuunnitteluun()">
+        Suunnittelu ja päätöksenteko
+      </juku-link-next>
     </div>
   </div>
 </div>
