LIVIJUKU-376 Avustushakemus: Käsittelijä- ja Päätöksentekijä-rooleille navigointimahdollisuus "Suunnittelu ja päätöksenteko"-näkymään suoraan avustushakemusnäytöltä

--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -200,7 +200,7 @@
     </div>
     <div class="pull-right">
       <juku-link-next
-        ng-click="siirrySuunnitteluun()">
+        ui-sref="app.kasittelija.suunnittelu({vuosi:vuosi, tyyppi:tyyppi, lajitunnus:haeLajitunnus(hakemus.organisaatioid)})">
         Suunnittelu ja päätöksenteko
       </juku-link-next>
     </div>
