LIVIJUKU-375 - Käsittelijän hakemusnäkymän painikkeiden asettelua

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -32,3 +32,5 @@
 @import '../scripts/components/dropdown'
 @import '../scripts/components/userDropdown'
 @import '../scripts/components/statisticDropdown'
+@import '../scripts/components/controls'
+@import '../scripts/components/navigationLinks'
