--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -168,41 +168,42 @@
       </div>
     </div>
   </juku-form>
-  <div class="row">
-    <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-12">
+
+  <juku-controls ng-show="sallittu('kasittely-hakemus')">
+    <juku-controls-buttons>
       <button ng-show="hakemusVireilla()"
               juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
               varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
               operaatio="tarkastaHakemus()"
-              class="pull-right btn btn-success">Merkitse tarkastetuksi
+              class="btn btn-success">
+        Merkitse tarkastetuksi
       </button>
       <button ng-show="hakemusVireilla()"
               juku-taydennysdialogi hakemusid="{{hakemusid}}" tyyppi="{{tyyppi}}"
-              class="pull-right btn btn-danger">Palauta täydennettäväksi
+              class="btn btn-danger">
+        Palauta täydennettäväksi
       </button>
       <button ng-hide="hakemusVireilla()"
               data-ng-click="tarkastaHakemus()"
-              class="pull-right btn btn-success" disabled>Merkitse
-        tarkastetuksi
+              class="btn btn-success" disabled>
+        Merkitse tarkastetuksi
       </button>
       <button ng-hide="hakemusVireilla()"
               data-ng-click="taydennyspyynto()"
-              class="pull-right btn btn-danger" disabled>Palauta täydennettäväksi
+              class="btn btn-danger" disabled>
+        Palauta täydennettäväksi
       </button>
-    </div>
-  </div>
-  <div class="row">&nbsp;</div>
-  <div class="row">
-    <div class="pull-left">
-      <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
-        Palaa hakemusten päänäkymään
-      </juku-link-prev>
-    </div>
-    <div class="pull-right">
-      <juku-link-next
-        ui-sref="app.kasittelija.suunnittelu({vuosi:vuosi, tyyppi:tyyppi, lajitunnus:haeLajitunnus(hakemus.organisaatioid)})">
-        Suunnittelu ja päätöksenteko
-      </juku-link-next>
-    </div>
-  </div>
+    </juku-controls-buttons>
+  </juku-controls>
+
+  <juku-navigation-links>
+    <juku-link-prev ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppi})">
+      Palaa hakemusten päänäkymään
+    </juku-link-prev>
+
+    <juku-link-next
+      ui-sref="app.kasittelija.suunnittelu({vuosi:vuosi, tyyppi:tyyppi, lajitunnus: haeLajitunnus(hakemus.organisaatioid)})">
+      Suunnittelu ja päätöksenteko
+    </juku-link-next>
+  </juku-navigation-links>
 </div>
