--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -34,3 +34,4 @@
 @import '../scripts/components/statisticDropdown'
 @import '../scripts/components/controls'
 @import '../scripts/components/navigationLinks'
+@import '../scripts/components/confirmation'
