LIVIJUKU-378 Käyttäjälistaus JUKUun

--- a/app/scripts/components/userDropdown/index.html
+++ b/app/scripts/components/userDropdown/index.html
@@ -11,6 +11,9 @@
       </a>
     </div>
     <ul class="dropdown-menu">
+      <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot">
+        JUKUn käyttäjät
+      </a></li>
       <li>
         <a class="navbartxt" href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">
           Kirjaudu ulos
