LIVIJUKU-378 Käyttäjälistaus JUKUun

--- a/app/scripts/views/yhteinen/kayttajatiedot.html
+++ b/app/scripts/views/yhteinen/kayttajatiedot.html
@@ -1,3 +1,33 @@
 <div class="container">
 <h1>JUKU-palvelun käyttäjätiedot</h1>
+  <h3>TOIMIVALTAISET VIRANOMAISET</h3>
+  <table st-table="toimivaltaiset" class="table table-hover table-condensed"
+         st-safe-src=toimivaltaiset>
+    <thead>
+    <tr>
+      <th st-sort="nimi">Nimi</th>
+      <th st-sort="organisaatio">Organisaatio</th>
+      <th st-sort="rooli">Rooli</th>
+      <th st-sort="sahkoposti">Sähköposti</th>
+      <th st-sort="puhelinnumero">Puhelinnumero</th>
+      <th st-sort="viimeisin_kirjautuminen">Viimeisin kirjautuminen</th>
+    </tr>
+    </thead>
+    <tbody>
+     </tbody>
+  </table>
+  <h3>LIIKENNEVIRASTON HENKILÖT</h3>
+  <table st-table="toimivaltaiset" class="table table-hover table-condensed"
+         st-safe-src=toimivaltaiset>
+    <thead>
+    <tr>
+      <th st-sort="nimi">Nimi</th>
+      <th st-sort="rooli">Rooli</th>
+      <th st-sort="sahkoposti">Sähköposti</th>
+      <th st-sort="puhelinnumero">Puhelinnumero</th>
+    </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 </div>
