--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -259,11 +259,16 @@ textarea
   display: block
 
 .varoitusvari
-  color:#ff0000;
+  color:#ff0000
 
 [ui-sref]
   cursor: pointer
 
+.st-sort-ascent:after
+  content: '\25B2'
+
+.st-sort-descent:after
+  content: '\25BC'
 
 // View specific styles
 #suunnittelu
