LIVIJUKU-378 Käyttäjälistaus JUKUun

--- a/app/scripts/views/yhteinen/kayttajatiedot.html
+++ b/app/scripts/views/yhteinen/kayttajatiedot.html
@@ -1,7 +1,7 @@
 <div class="container">
 <h1>JUKU-palvelun käyttäjätiedot</h1>
   <h3>TOIMIVALTAISET VIRANOMAISET</h3>
-  <table st-table="toimivaltaiset" class="table table-hover table-condensed"
+  <table st-table="toimivaltaiset" class="table table-condensed"
          st-safe-src=toimivaltaiset_viranomaiset>
     <thead>
     <tr>
@@ -25,7 +25,7 @@
      </tbody>
   </table>
   <h3>LIIKENNEVIRASTON HENKILÖT</h3>
-  <table st-table="liikennevirasto" class="table table-hover table-condensed"
+  <table st-table="liikennevirasto" class="table table-condensed"
          st-safe-src=liikenneviraston_henkilot>
     <thead>
     <tr>
