--- a/app/scripts/components/userDropdown/index.html
+++ b/app/scripts/components/userDropdown/index.html
@@ -11,6 +11,9 @@
       </a>
     </div>
     <ul class="dropdown-menu">
+      <li><a ui-sref-active="is-active" ui-sref="app.hakija.asetukset">
+        Asetukset
+      </a></li>
       <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot">
         JUKUn käyttäjät
       </a></li>
