--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -13,7 +13,8 @@
       <h2>Liikenteen kysynnän tunnusluvut</h2>
 
       <p>Mikäli kysyntätietoa ei saada viranomaisen maksujärjestelmästä (esim. Waltti), pyydetään tieto
-        liikennöitsijältä. Jos liikennöitsijäkään ei pysty toimittamaan tarkkaa tietoa, voidaan laskea otos sopivalta keskimääräiseltä
+        liikennöitsijältä. Jos liikennöitsijäkään ei pysty toimittamaan tarkkaa tietoa, voidaan laskea otos sopivalta
+        keskimääräiseltä
         ajankohdalta ja muodostetaan siitä keskimääräinen arki/la/su sekä kuukausi.
         Täytettävän solun oikealla puolella ilmenee täytettävän luvun yksikkö.
 
@@ -24,23 +25,29 @@
 
     </div>
   </div>
+  <div class="row alert alert-warning">
+    <p>Tällä hetkellä numerokenttien (esim. nousut) editointi ei toimi kunnolla Firefox:ssa, komponentin korjausta
+      odotellaan.</p>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Nousijat keskimääräisenä talven arkipäivänä / lauantaina / sunnuntaina</h3>
-      <div id="lks_grid1" ui-grid="lks_grid1" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
-      </div>
+
+      <div id="lks_grid1" ui-grid="lks_grid1" ui-grid-edit ui-grid-cellnav class="grid"></div>
     </div>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Nousijat kuukausittain</h3>
-      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
+
+      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-edit ui-grid-cellnav ui-grid-row-edit class="grid"></div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Bruttoliikenteen tarjouskilpailut</h3>
       <button id="uusiRivi" ng-click="uusiRivi()">Lisää rivi</button>
-      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-resize-columns ui-grid-edit ui-grid-cellnav class="grid"></div>
+      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-edit ui-grid-cellnav ui-grid-row-edit class="grid"></div>
     </div>
   </div>
 </div>
