--- a/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
+++ b/app/scripts/views/yhteinen/tunnuslukujenSyottaminen.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="row alert alert-warning">
-    <p>Tällä hetkellä numerokenttien (esim. nousut) editointi ei toimi kunnolla Firefox:ssa, komponentin korjausta
+    <p>Tällä hetkellä numerokenttien (esim. nousut) editointi ei toimi kunnolla Firefox:ssa, ui-grid komponentin päivitystä
       odotellaan.</p>
   </div>
   <div class="row">
@@ -40,14 +40,14 @@
     <div class="col-md-12">
       <h3>Nousijat kuukausittain</h3>
 
-      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-edit ui-grid-cellnav ui-grid-row-edit class="grid"></div>
+      <div id="lks_grid2" ui-grid="lks_grid2" ui-grid-edit ui-grid-cellnav class="grid"></div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Bruttoliikenteen tarjouskilpailut</h3>
       <button id="uusiRivi" ng-click="uusiRivi()">Lisää rivi</button>
-      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-edit ui-grid-cellnav ui-grid-row-edit class="grid"></div>
+      <div id="lks_grid3" ui-grid="lks_grid3" ui-grid-edit ui-grid-cellnav class="grid"></div>
     </div>
   </div>
 </div>
