--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -270,6 +270,14 @@ textarea
 .st-sort-descent:after
   content: '\25BC'
 
+.ui-grid-header-cell .ui-grid-cell-contents
+  height: 48px
+  white-space: normal
+  -ms-text-overflow: clip
+  -o-text-overflow: clip
+  text-overflow: clip
+  overflow: visible
+
 // View specific styles
 #suunnittelu
   table
